# acknowledgements

./: ACKNOWLEDGEMENTS-BuildAndDev.md  ACKNOWLEDGEMENTS-DepAndNames.md  ACKNOWLEDGEMENTS-NameAndDeps.md  ACKNOWLEDGEMENTS.md  Cargo.toml  README.md
.github/workflows/: publish.yaml  rust.yml
src/: main.rs  template.md
tests/: all-deps.rs  dep-and-names.rs  help.rs  name-and-count.rs  name-and-deps.rs
tests/snapshots/: help__print_help.snap
