[package]
name = "acknowledgements-rs"
version = "0.1.0"
edition = "2021"
authors = ["a.nvlkv <acknowledgements_rs@proton.me>"]
license = "CC-BY-4.0"
repository = "https://github.com/anvlkv/acknowledgements"
description = "Generate an .md file full of gratitude"

[[bin]]
name = "acknowledge"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
octocrab = "0.38.0"
tokio = { version = "=1.35", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "macros",
    "fs",
] }
strum = "0.26"
strum_macros = "0.26"
anyhow = "1.0.86"
cargo_toml = "0.20.3"
serde = "1.0.203"
crates_io_api = "0.11.0"
unfmt = "0.2.2"
unfmt_macros = "0.2.2"
handlebars = "5.1.2"
serde_json = "1.0.117"
reqwest = { version = "0.12.5", features = ["json"] }
dirs = "5.0.1"
cacache = { version = "13.0.0", default-features = false, features = [
    "tokio-runtime",
    "mmap",
] }
